fix aligns hardware page

--- a/css/hardware.css
+++ b/css/hardware.css
@@ -169,8 +169,9 @@
         font-size: .72rem;
         padding: .45rem;
     }
+
+    .espaco-vazio-produto{
+        height: 1.3rem;
+    }
 }
 
-.card-produto p{
-    opacity: 0;
-}
